--- a/appendix/index.html
+++ b/appendix/index.html
@@ -54,7 +54,7 @@
             <dt><img class="side_icon" src="../img/rhino.png"></dt>
             <dt><img class="side_icon" src="../img/deepening.png"></dt>          
             <dt><img class="side_icon" id="this" src="../img/appendix.png"></dt>
-            <span id="list">
+            <span id="list" data-isVisible="true">
                 <h1 id="ttl">부록</h1>
                 <dd id="d99-1" class="sdb">참고자료</dd><br>
                 <dd id="d99-2" class="sdb">도움주신 분들</dd><br>
@@ -107,7 +107,7 @@
                 <li class="a" id="https://open.kakao.com/me/nolbo">문의하기 (nolbo)</li>
             </div>
         </section>
-    </section>
+    </article>
     <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
     <!-- <script type="text/javascript" src="script/require.js"></script> -->
 </body>
