--- a/deepening/index.html
+++ b/deepening/index.html
@@ -54,7 +54,7 @@
             <dt><img class="side_icon" src="../img/rhino.png"></dt>
             <dt><img class="side_icon" id="this" src="../img/deepening.png"></dt>          
             <dt><img class="side_icon" src="../img/appendix.png"></dt>
-            <span id="list">
+            <span id="list" data-isVisible="true">
                 <h1 id="ttl">심화</h1>
                 <dd id="d5-1" class="sdb">이벤트 리스너</dd><br>
                 <dd id="d5-2" class="sdb">외부 패키지/클래스</dd><br>
