--- a/full/index.html
+++ b/full/index.html
@@ -41,6 +41,7 @@
     <div id="toast_con" class="default" role="alert"><p id="toast_txt"></p></div>
     <div id="loader" style="opacity: 1;">
         <img id="loader_img" src="../img/grp.jpg" style="top:0;left:0; position:fixed; min-width:100%;">
+        <div id="text" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);opacity: 0;">Docs</div>
     </div>
     <div id="main" style="opacity: 0;">
     <!-- <header>
