--- a/signup.html
+++ b/signup.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
-    <link rel="stylesheet" href="../style/signup.css">
-    <link rel="stylesheet" href="../style/mobile.css">
-    <link rel="stylesheet" href="../style/dark.css">
-    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="../../img/docs_black.png">
-    <script type="text/javascript" src="../../script/jquery.js"></script>
-    <script type="text/javascript" src="../../script/dark.js"></script>
-    <script type="text/javascript" src="../script/account_grp.js"></script>
-    <script type="text/javascript" src="../script/upload.js"></script>
+    <link rel="stylesheet" href="style/acc.css">
+    <link rel="stylesheet" href="style/acc_mobile.css">
+    <link rel="stylesheet" href="style/acc_dark.css">
+    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/docs_black.png">
+    <script type="text/javascript" src="script/jquery.js"></script>
+    <script type="text/javascript" src="script/dark.js"></script>
+    <script type="text/javascript" src="script/account_grp.js"></script>
+    <script type="text/javascript" src="script/upload.js"></script>
     <title>KBot Docs | 회원가입</title>
 </head>
 <body>
     <header>
         <div>
-            <img id="docs" src="../../img/docs.png">
+            <img id="docs" src="img/docs.png">
             <h1>회원가입</h1>
         </div>
     </header>
@@ -28,8 +28,12 @@
             <input id="password" type="password" placeholder="비밀번호"><br>
             <input id="re-password" type="password" placeholder="비밀번호 확인"><br>
             <input id="email" type="email" placeholder="이메일"><br>
-            <img id="profile" src="../../img/profile.png"><input id="profile" type="file" accept="image/*"><br>
+            <img id="profile" src="img/profile.png"><input id="profile" type="file" accept="image/*"><br>
             <div id="recaptcha">킹봇이 아닌 거십니다!</div>
+            <input id="tos" type="checkbox">
+            <div id="dscrpt">
+                <label for="tos"><a id="ck"><img src="img/img_bg.png"></a></label><p class="dscrpt"><a href="TOS.html" target="_blank">개인정보 수집 및 이용약관</a>에 동의합니다. (필수)</p>
+            </div>
             <button id="complete" type="button">회원가입</button>
         </form>
     </article>
