--- a/summary.html
+++ b/summary.html
@@ -11,28 +11,28 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kkotbot-docs.kro.kr">
     <meta property="og:title" content="KBot Docs | 개요">
-    <meta property="og:image" content="../img/grp.jpg">
+    <meta property="og:image" content="img/grp.jpg">
     <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
-    <script type="text/javascript" src="../script/jquery.js"></script>
-    <script type="text/javascript" src="../script/jquery-ui.js"></script>
-    <script type="text/javascript" src="../script/animation.js"></script>
-    <script type="text/javascript" src="../script/dark.js"></script>
-    <script type="text/javascript" src="../script/newToast.js"></script>
-    <script type="text/javascript" src="../script/inko.js"></script>
-    <script type="text/javascript" src="../script/search.js"></script>
-    <script type="text/javascript" src="../script/copy.js"></script>
+    <script type="text/javascript" src="script/jquery.js"></script>
+    <script type="text/javascript" src="script/jquery-ui.js"></script>
+    <script type="text/javascript" src="script/animation.js"></script>
+    <script type="text/javascript" src="script/dark.js"></script>
+    <script type="text/javascript" src="script/newToast.js"></script>
+    <script type="text/javascript" src="script/inko.js"></script>
+    <script type="text/javascript" src="script/search.js"></script>
+    <script type="text/javascript" src="script/copy.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/highlight.min.js"></script>
-    <script type="text/javascript" src="../script/hl.js"></script>
+    <script type="text/javascript" src="script/hl.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
-    <link rel="stylesheet" href="../style/highlighting.css">
+    <link rel="stylesheet" href="style/highlighting.css">
     <link rel="canonical" href="https://kkotbot-docs.kro.kr">
-    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="../img/docs_black.png">
+    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/docs_black.png">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style/base.css">
-    <link rel="stylesheet" href="../style/mobile.css">
-    <link rel="stylesheet" href="../style/dark.css">
-    <link rel="stylesheet" href="../style/newToast.css">
+    <link rel="stylesheet" href="style/base.css">
+    <link rel="stylesheet" href="style/mobile.css">
+    <link rel="stylesheet" href="style/dark.css">
+    <link rel="stylesheet" href="style/newToast.css">
     <title>KBot Docs | 개요</title>
 </head>
 <body>
@@ -46,14 +46,14 @@
         </div>
     </header> -->
     <aside>
-        <div id="docs_space"><img id="docs" src="../img/docs.png"></div>
+        <div id="docs_space"><img id="docs" src="img/docs.png"></div>
         <dl>
-            <dt><img class="side_icon" id="this" src="../img/summary.png"></dt>
-            <dt><img class="side_icon" src="../img/api.png"></dt>
-            <dt><img class="side_icon" src="../img/api2.png"></dt>
-            <dt><img class="side_icon" src="../img/rhino.png"></dt>
-            <dt><img class="side_icon" src="../img/deepening.png"></dt>          
-            <dt><img class="side_icon" src="../img/appendix.png"></dt>
+            <dt><img class="side_icon" id="this" src="img/summary.png"></dt>
+            <dt><img class="side_icon" src="img/api.png"></dt>
+            <dt><img class="side_icon" src="img/api2.png"></dt>
+            <dt><img class="side_icon" src="img/rhino.png"></dt>
+            <dt><img class="side_icon" src="img/deepening.png"></dt>          
+            <dt><img class="side_icon" src="img/appendix.png"></dt>
             <span id="list" data-isVisible="true">
                 <h1 id="ttl">개요</h1>
                 <dd id="d1-1" class="sdb">알아두기</dd><br>
