--- a/signup.html
+++ b/signup.html
@@ -30,9 +30,13 @@
             <input id="email" type="email" placeholder="이메일"><br>
             <img id="profile" src="img/profile.png"><input id="profile" type="file" accept="image/*"><br>
             <div id="recaptcha">킹봇이 아닌 거십니다!</div>
-            <input id="tos" type="checkbox">
-            <div id="dscrpt">
-                <label for="tos"><a id="ck"><img src="img/img_bg.png"></a></label><p class="dscrpt"><a href="TOS.html" target="_blank">개인정보 수집 및 이용약관</a>에 동의합니다. (필수)</p>
+            <input id="privacy" type="checkbox">
+            <div class="dscrpt">
+                <label for="privacy"><a id="ck"><img src="img/img_bg.png"></a></label><p class="dscrpt"><a href="privacy.html" target="_blank">개인정보 수집 및 이용약관</a>에 동의합니다. (필수)</p>
+            </div>
+            <input id="location" type="checkbox">
+            <div class="dscrpt">
+                <label for="location"><a id="ck"><img src="img/img_bg.png"></a></label><p class="dscrpt"><a href="location.html" target="_blank">위치정보 수집 및 이용약관</a>에 동의합니다. (필수)</p>
             </div>
             <button id="complete" type="button">회원가입</button>
         </form>
