--- a/signup.html
+++ b/signup.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/account_grp.js"></script>
     <script type="text/javascript" src="script/upload.js"></script>
+    <script type="text/javascript" src="https://www.google.com/recaptcha/api.js"></script>
     <title>KBot Docs | 회원가입</title>
 </head>
 <body>
@@ -29,7 +30,6 @@
             <input id="re-password" type="password" placeholder="비밀번호 확인"><br>
             <input id="email" type="email" placeholder="이메일"><br>
             <img id="profile" src="img/profile.png"><input id="profile" type="file" accept="image/*"><br>
-            <div id="recaptcha">킹봇이 아닌 거십니다!</div>
             <input id="privacy" type="checkbox">
             <div class="dscrpt">
                 <label for="privacy"><a id="ck"><img src="img/img_bg.png"></a></label><p class="dscrpt"><a href="privacy.html" target="_blank">개인정보 수집 및 이용약관</a>에 동의합니다. (필수)</p>
@@ -38,8 +38,13 @@
             <div class="dscrpt">
                 <label for="location"><a id="ck"><img src="img/img_bg.png"></a></label><p class="dscrpt"><a href="location.html" target="_blank">위치정보 수집 및 이용약관</a>에 동의합니다. (필수)</p>
             </div>
-            <button id="complete" type="button">회원가입</button>
+            <button id="complete" type="button" class="g-recaptcha" data-sitekey="6LccHfIZAAAAANffs67hBZHRfjDc_s-8cKtWgNNX" data-callback='onSubmit' data-action='submit'>회원가입</button>
         </form>
     </article>
+    <script>
+        function onSubmit(token) {
+          document.getElementById("complete").submit();
+        }
+      </script>
 </body>
 </html>
