--- a/full.html
+++ b/full.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="script/copy.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/highlight.min.js"></script>
     <script type="text/javascript" src="script/hl.js"></script>
+    <script type="text/javascript" src="script/firebase.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <link rel="stylesheet" href="style/highlighting.css">
