--- a/signin.html
+++ b/signin.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/account_grp.js"></script>
     <script type="text/javascript" src="script/upload.js"></script>
+    <script type="text/javascript" src="script/firebase.js"></script>
     <title>KBot Docs | 로그인</title>
 </head>
 <body>
