--- a/signup.html
+++ b/signup.html
@@ -13,6 +13,8 @@
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/account_grp.js"></script>
     <script type="text/javascript" src="script/upload.js"></script>
+    <script type="text/javascript" src="script/firebase.js"></script>
+    <script type="text/javascript" src="script/signUp.js"></script>
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js"></script>
     <title>KBot Docs | 회원가입</title>
 </head>
@@ -45,6 +47,8 @@
         function onSubmit(token) {
           document.getElementById("complete").submit();
         }
-      </script>
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha256.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/enc-base64-min.js"></script>
 </body>
 </html>
