--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kkotbot-docs.kro.kr">
     <meta property="og:title" content="KBot Docs | 개요">
-    <meta property="og:image" content="../img/grp.jpg">
+    <meta property="og:image" content="img/grp.jpg">
     <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
-    <script type="text/javascript" src="../script/jquery.js"></script>
-    <script type="text/javascript" src="../script/jquery-ui.js"></script>
+    <script type="text/javascript" src="script/jquery.js"></script>
+    <script type="text/javascript" src="script/jquery-ui.js"></script>
+    <script type="text/javascript" src="script/firebase.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <link rel="stylesheet" href="style/main.css">
     <link rel="canonical" href="https://kkotbot-docs.kro.kr">
-    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="../img/docs_black.png">
+    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/docs_black.png">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <title>KBot Docs</title>
 </head>
