--- a/signup.html
+++ b/signup.html
@@ -45,10 +45,8 @@
     </article>
     <script>
         function onSubmit(token) {
-          document.getElementById("complete").submit();
+            document.getElementById("#complete").submit();
         }
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha256.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/enc-base64-min.js"></script>
 </body>
 </html>
