--- a/deepening.html
+++ b/deepening.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/jquery-ui.js"></script>
     <script type="text/javascript" src="script/animation.js"></script>
+    <script type="text/javascript" src="script/sidebar.js"></script>
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/newToast.js"></script>
     <script type="text/javascript" src="script/inko.js"></script>
@@ -49,12 +50,12 @@
     <aside>
         <div id="docs_space"><img id="docs" src="img/docs.png"></div>
         <dl>
-            <dt><img class="side_icon" src="img/summary.png"></dt>
-            <dt><img class="side_icon" src="img/api.png"></dt>
-            <dt><img class="side_icon" src="img/api2.png"></dt>
-            <dt><img class="side_icon" src="img/rhino.png"></dt>
-            <dt><img class="side_icon" id="this" src="img/deepening.png"></dt>          
-            <dt><img class="side_icon" src="img/appendix.png"></dt>
+            <dt id="summary"><img class="side_icon" src="img/summary.png"></dt>
+            <dt id="legacyAPI"><img class="side_icon" src="img/api.png"></dt>
+            <dt id="API2"><img class="side_icon" src="img/api2.png"></dt>
+            <dt id="rhino"><img class="side_icon" src="img/rhino.png"></dt>
+            <dt id="deepening"><img class="side_icon" id="this" src="img/deepening.png"></dt>          
+            <dt id="appendix"><img class="side_icon" src="img/appendix.png"></dt>
             <span id="list" data-isVisible="true">
                 <h1 id="ttl">심화</h1>
                 <dd id="d5-1" class="sdb">이벤트 리스너</dd><br>
