--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/jquery-ui.js"></script>
-    <script type="text/javascript" src="script/firebase.js"></script>
+    <script type="text/javascript" src="script/dark.js"></script>
+    <script type="text/javascript" src="script/index.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="style/idx_dark.css">
+    <link rel="stylesheet" href="style/idx_mobile.css">
     <link rel="canonical" href="https://kkotbot-docs.kro.kr">
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/docs_black.png">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
@@ -26,9 +29,21 @@
 </head>
 <body>
     <article>
-        <div id="one">
-            <img id="bg" src="img/bg.png">
-        </div>
+        <img id="one" src="img/home_bg.png">
+        <img id="two" src="img/home_bg.png">
+        <section>
+            <img id="login" src="img/login.png">
+            <img id="docs" src="img/docs.png">
+            <div id="list">
+                <img class="icon" id="summary" src="img/blank.png">
+                <img class="icon" id="legacyAPI" src="img/blank.png">
+                <img class="icon" id="API2" src="img/blank.png">
+                <img class="icon" id="rhino" src="img/blank.png">
+                <img class="icon" id="deepening" src="img/blank.png">
+                <img class="icon" id="appendix" src="img/blank.png">
+                <img class="icon" id="full" src="img/blank.png">
+            </div>
+        </section>
     </article>
 </body>
 </html>
