--- a/legacyAPI.html
+++ b/legacyAPI.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/jquery-ui.js"></script>
     <script type="text/javascript" src="script/animation.js"></script>
+    <script type="text/javascript" src="script/sidebar.js"></script>
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/newToast.js"></script>
     <script type="text/javascript" src="script/inko.js"></script>
@@ -43,18 +44,18 @@
         <div id="wrap">
             <form action="" autocomplete="off">
                 <input id="search" data-bg="#ff0d86" name="search" type="text" placeholder="검색할 내용을 입력하세요."><input id="search_submit" value="Rechercher" type="submit">
-            </form>
+            </form>"
         </div>
     </header> -->
     <aside>
         <div id="docs_space"><img id="docs" src="img/docs.png"></div>
         <dl>
-            <dt><img class="side_icon" src="img/summary.png"></dt>
-            <dt><img class="side_icon" id="this" src="img/api.png"></dt>
-            <dt><img class="side_icon" src="img/api2.png"></dt>
-            <dt><img class="side_icon" src="img/rhino.png"></dt>
-            <dt><img class="side_icon" src="img/deepening.png"></dt>          
-            <dt><img class="side_icon" src="img/appendix.png"></dt>
+            <dt id="summary"><img class="side_icon" src="img/summary.png"></dt>
+            <dt id="legacyAPI"><img class="side_icon" id="this" src="img/api.png"></dt>
+            <dt id="API2"><img class="side_icon" src="img/api2.png"></dt>
+            <dt id="rhino"><img class="side_icon" src="img/rhino.png"></dt>
+            <dt id="deepening"><img class="side_icon" src="img/deepening.png"></dt>          
+            <dt id="appendix"><img class="side_icon" src="img/appendix.png"></dt>
             <span id="list" data-isVisible="true">
                 <h1 id="ttl">레거시 API</h1>
                 <dd id="d2-1" class="sdb">Api</dd><br>
