--- a/signin.html
+++ b/signin.html
@@ -11,7 +11,6 @@
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/docs_black.png">
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/dark.js"></script>
-    <script type="text/javascript" src="script/upload.js"></script>
     <script type="text/javascript" src="script/firebase.js"></script>
     <script type="text/javascript" src="script/signIn.js"></script>
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js"></script>
@@ -30,6 +29,7 @@
             <input id="password" type="password" placeholder="비밀번호"><br>
             <button id="complete" type="button" class="g-recaptcha" data-sitekey="6LccHfIZAAAAANffs67hBZHRfjDc_s-8cKtWgNNX" data-callback='onSubmit' data-action='submit'>로그인</button>
         </form>
+        <p class="sml">계정이 없으신가요? <a href="signup.html">계정을 만들어보세요!</a></p>
     </article>
     <script>
         function onSubmit(token) {
