--- a/full.html
+++ b/full.html
@@ -56,8 +56,8 @@
         <div id="docs_space"><img id="docs" src="img/docs.png"></div>
         <dl>
             <dt id="summary"><img class="side_icon" id="this" src="img/summary.png"></dt>
-            <dt id="api"><img class="side_icon" src="img/api.png"></dt>
-            <dt id="api2"><img class="side_icon" src="img/api2.png"></dt>
+            <dt id="legacyAPI"><img class="side_icon" src="img/api.png"></dt>
+            <dt id="API2"><img class="side_icon" src="img/api2.png"></dt>
             <dt id="rhino"><img class="side_icon" src="img/rhino.png"></dt>
             <dt id="deepening"><img class="side_icon" src="img/deepening.png"></dt>          
             <dt id="appendix"><img class="side_icon" src="img/appendix.png"></dt>
