--- a/API2.html
+++ b/API2.html
@@ -52,7 +52,7 @@
         <dl>
             <dt id="summary"><img class="side_icon" src="img/summary.png"></dt>
             <dt id="legacyAPI"><img class="side_icon" src="img/api.png"></dt>
-            <dt><img class="side_icon" id="this" src="img/api2.png"></dt>
+            <dt id="API2"><img class="side_icon" id="this" src="img/api2.png"></dt>
             <dt id="rhino"><img class="side_icon" src="img/rhino.png"></dt>
             <dt id="deepening"><img class="side_icon" src="img/deepening.png"></dt>          
             <dt id="appendix"><img class="side_icon" src="img/appendix.png"></dt>
@@ -69,6 +69,19 @@
                 <dd id="d3-9" class="sdb">Security</dd>
             </span>
         </dl>
+        <div id="docs_fun">
+            <img id="search" src="img/search.png">
+            <div id="autocomplete">
+                <li class="auto">로렘입숨</li>
+                <li class="auto">로오렘입숨</li>
+                <li class="auto">로오오렘입숨</li>
+                <li class="auto">로오오오렘입숨</li>
+                <li class="auto">로오오오오렘입숨</li>
+            </div>
+            <form autocomplete="off">
+                <input id="search" type="text" placeholder="검색...">
+            </form>
+        </div>
     </aside>
     <article>
         <section id="api2">
