--- a/rhino.html
+++ b/rhino.html
@@ -72,6 +72,19 @@
                 <dd id="d4-12" class="sdb">함수</dd>
             </span>
         </dl>
+        <div id="docs_fun">
+            <img id="search" src="img/search.png">
+            <div id="autocomplete">
+                <li class="auto">로렘입숨</li>
+                <li class="auto">로오렘입숨</li>
+                <li class="auto">로오오렘입숨</li>
+                <li class="auto">로오오오렘입숨</li>
+                <li class="auto">로오오오오렘입숨</li>
+            </div>
+            <form autocomplete="off">
+                <input id="search" type="text" placeholder="검색...">
+            </form>
+        </div>
     </aside>
     <article>
         <section id="rhino">
