--- a/legacyAPI.html
+++ b/legacyAPI.html
@@ -70,6 +70,19 @@
                 <dd id="d2-10" class="sdb">imageDB</dd>
             </span>
         </dl>
+        <div id="docs_fun">
+            <img id="search" src="img/search.png">
+            <div id="autocomplete">
+                <li class="auto">로렘입숨</li>
+                <li class="auto">로오렘입숨</li>
+                <li class="auto">로오오렘입숨</li>
+                <li class="auto">로오오오렘입숨</li>
+                <li class="auto">로오오오오렘입숨</li>
+            </div>
+            <form autocomplete="off">
+                <input id="search" type="text" placeholder="검색...">
+            </form>
+        </div>
     </aside>
     <article>
         <section id="api">
